# test-hpc-coveralls

./: .gitignore  .travis.yml  LICENSE
app/: Main.hs
src/: Lib.hs
test-hpc-coveralls/: README.md  test-hpc-coveralls.cabal
test-hpc-coveralls/app/: Main.hs
test-hpc-coveralls/src/: Main.hs
test-hpc-coveralls/test/: Test.hs
