name:                test-hpc-coveralls
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mizunashi-mana/test-hpc-coveralls#readme
license:             BSD3
license-file:        LICENSE
author:              Mizunashi Mana
maintainer:          mizunashi-mana@noreply.git
copyright:           Mizunashi Mana
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lib
  build-depends:       base

executable test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , test-hpc-coveralls

test-suite spec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base
                     , test-hpc-coveralls
                     , hspec
                     , QuickCheck